Fix minor bugs in glue.ipynb, add ability to extract hyperparams for file or whole dir

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mps\n"
+     ]
+    }
+   ],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -151,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
     "task_param = \"wnli\"\n",
-    "embedding_param = [\"meanpool_double\"]\n",
+    "embedding_param = [\"meanpool_single\"]\n",
     "\n",
     "use_carbontracker = False\n",
     "# NOTE: Carbontracker should generate its own output file \n",
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +337,10 @@
     "        X_val[id] = np.load(paths[1])\n",
     "        X_test[id] = np.load(paths[2])\n",
     "\n",
+    "        print(f\"X_train shape: {X_train[0].shape}\")\n",
+    "        print(f\"X_val shape  : {X_val[0].shape}\")\n",
+    "        print(f\"X_test shape : {X_test[0].shape}\")\n",
+    "\n",
     "    else:\n",
     "        embedding_tracker.append(id)\n",
     "        print(f\"No {embedding} saved embeddings found\")\n",
@@ -336,7 +348,8 @@
     "        if \"cls\" in embedding_param[id] or \"meanpool\" in embedding_param[id]:\n",
     "            create_dataloader = True\n",
     "        elif \"sentence\" in embedding_param[id]:\n",
-    "            create_sentence = True"
+    "            create_sentence = True\n",
+    "\n"
    ]
   },
   {
@@ -348,9 +361,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1fab07868cd4d55831a653a03ab378c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/635 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e6ab0a7eaea40c6b721ce4bfaaa010b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/71 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "43aef2b97b3848118fd1f7e14e216bbd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/146 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "max_len=512\n",
     "\n",
@@ -414,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +481,7 @@
     "\n",
     "# Function to merge datasets\n",
     "def clean_dataset(inputs, split):\n",
-    "    common_columns_to_remove = {'sentence1', 'sentence2', 'label', 'question1', 'question2', 'premise', 'hypothesis', 'question'}\n",
+    "    common_columns_to_remove = {'sentence', 'sentence1', 'sentence2', 'label', 'question1', 'question2', 'premise', 'hypothesis', 'question'}\n",
     "\n",
     "    if isinstance(inputs, list):\n",
     "        dataframe = [ds[split].to_pandas() for ds in inputs]\n",
@@ -487,12 +543,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm\n",
-    "\n",
     "def compute_embeddings(loader, X):\n",
     "    column_names = list(next(iter(loader)).keys())\n",
     "\n",
@@ -615,7 +669,10 @@
    "source": [
     "X_train = np.concatenate(X_train, axis=1)\n",
     "X_val = np.concatenate(X_val, axis=1)\n",
-    "X_test = np.concatenate(X_test, axis=1)"
+    "X_test = np.concatenate(X_test, axis=1)\n",
+    "print(f\"X_train shape: {X_train.shape}\")\n",
+    "print(f\"X_val shape  : {X_val.shape}\")\n",
+    "print(f\"X_test shape : {X_test.shape}\")"
    ]
   },
   {
@@ -694,7 +751,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['meanpool_single']\n"
+     ]
+    }
+   ],
    "source": [
     "print(embedding_param)"
    ]
@@ -707,12 +772,12 @@
    "source": [
     "######################\n",
     "# Choose ids of (Ux, Vx) to alter embeddings\n",
-    "column_ids = []\n",
+    "column_ids = [0]\n",
     "######################\n",
     "\n",
     "if column_ids:\n",
     "    f = lambda embeddings : add_embeddings(embeddings=embeddings, column_ids=column_ids, embedding_size=768, \n",
-    "                                           is_UV=[False, False], is_diff=[True, True], is_mult=[False, False])\n",
+    "                                           is_UV=[False, False], is_diff=[True, False], is_mult=[False, False])\n",
     "\n",
     "    X_train_computed = f(embeddings=X_train)\n",
     "    X_val_computed = f(embeddings=X_val)\n",
@@ -738,20 +803,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24 hyperparameter combinations\n"
+     ]
+    }
+   ],
    "source": [
     "input_size = X_train_computed.shape[1]\n",
     "\n",
     "param_grid = {\n",
     "    'num_epochs': [50],\n",
     "    'batch_size': [32, 512],\n",
-    "    'learning_rate': [1e-2, 1e-3],\n",
+    "    'learning_rate': [1e-2, 1e-4],\n",
     "    'category': [task_config.class_type],\n",
     "    'norm': [False],\n",
     "    'input_size': [input_size],\n",
-    "    'layer_size': [12, 48, 192, 768, 1536],\n",
+    "    'layer_size': [768],\n",
     "    'num_classes': [task_config.num_classes],\n",
-    "    'num_layers': [1, 3, 5, 10],\n",
+    "    'num_layers': [1, 3, 5],\n",
     "    'weight_decay':[1e-2, 1e-4],\n",
     "    'patience': [3],\n",
     "    'min_delta': [0],\n",
@@ -770,20 +843,42 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving results to ./results/meanpool_single/mrpc/val_20240106_011328_DistilRoBERTa.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd7598e7ce4143cfbc4e516ab776d9f9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/24 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create output folder if it doesn't exist\n",
     "if not os.path.exists('output'):\n",
     "    os.makedirs('output')\n",
     "\n",
     "# Setup for logging\n",
-    "console_output_filename = f'./output/{\"_\".join(embedding_param)}_{task_param}_console_output.txt'\n",
+    "console_output_filename = f'./output/{\"_\".join(embedding_param[0])}_{task_param}_console_output.txt'\n",
     "\n",
     "with open(console_output_filename, 'a') as logfile:\n",
     "    logfile.write('\\n\\nBEGIN TRAINING LOOP\\n\\n')\n",
     "\n",
     "# Setup for saving results\n",
-    "results_folder = pathlib.Path(f\"results/{embedding_param}/{task_param}\")\n",
+    "results_folder = pathlib.Path(f\"results/{embedding_param[0]}/{task_param}\")\n",
     "results_folder.mkdir(parents=True, exist_ok=True)\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "results_file = results_folder / f\"val_{save_file_id}_{model_param}.csv\"\n",
@@ -848,7 +943,7 @@
     "        logfile.write(f\"\\nTraining energy    : {training_energy}\") \n",
     "        logfile.write(f\"\\nEmbedding energy   : {embedding_energy}\") \n",
     "    # Write to results csv\n",
-    "    with open(results_file, 'a', newline='') as csvfile:                                                                \n",
+    "    with open(results_file, 'a', newline='') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
     "        row = metric_vals + [training_time, embedding_time, training_energy, embedding_energy] + list(params.values())\n",
     "        writer.writerow(row)"
@@ -872,6 +967,13 @@
     "\n",
     "results_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
