--- a/fast/hyperparam.ipynb
+++ b/fast/hyperparam.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "a4d91904-7fb0-40ff-a07c-2664660f5d7d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "def extract_hyperparameters(results_base, embedding, task):\n",
+    "def extract_hyperparameters_from_dir(results_base, embedding, task, dates=[]):\n",
     "    results_dir = os.path.join(results_base, embedding, task)\n",
     "    file_list = os.listdir(results_dir)\n",
     "    \n",
@@ -36,18 +36,35 @@
     "    \n",
     "    for filename in file_list:\n",
     "        filepath = os.path.join(results_dir, filename)\n",
-    "        with open(filepath, 'r') as file:\n",
-    "            df_new = pd.read_csv(file)\n",
-    "            if results_df.empty:\n",
-    "                results_df = df_new\n",
-    "            else:\n",
-    "                results_df = pd.concat([results_df, df_new])\n",
+    "        if not dates or any(date in filepath for date in dates):\n",
+    "            with open(filepath, 'r') as file:\n",
+    "                df_new = pd.read_csv(file)\n",
+    "                if results_df.empty:\n",
+    "                    results_df = df_new\n",
+    "                else:\n",
+    "                    results_df = pd.concat([results_df, df_new])\n",
+    "    \n",
+    "    return extract_hyperparameters(results_df, embedding, task) if not results_df.empty else {\"error\": \"no csv found\"}\n",
+    "\n",
+    "def extract_hyperparameters_from_file(filepath, embedding, task):\n",
+    "\n",
+    "    with open(filepath, 'r') as file:\n",
+    "        results_df = pd.read_csv(file)\n",
+    "\n",
+    "    return extract_hyperparameters(results_df, embedding, task)\n",
+    "\n",
+    "def extract_hyperparameters(results_df, embedding, task):\n",
     "    \n",
     "    metric = \"accuracy\"\n",
+    "    second_metric = \"\"\n",
     "    if task.lower() == \"stsb\":\n",
     "        metric = \"pearson\"\n",
+    "        second_metric = \"spearman\"\n",
     "    if task.lower() == \"cola\":\n",
     "        metric = \"mcc\"\n",
+    "    if task.lower() in [\"mrpc\", \"qqp\"]:\n",
+    "        metric = \"f1\"\n",
+    "        second_metric = \"accuracy\"\n",
     "        \n",
     "    best = results_df[metric].max()\n",
     "    best_row = results_df[results_df[metric] == best]\n",
@@ -57,10 +74,13 @@
     "        hyperparam_grid[key] = [list(val.values())[0]]\n",
     "    print(f\"embedding: {embedding}\")\n",
     "    print(f\"task: {task}\")\n",
-    "    print(f\"{metric} score: {hyperparam_grid[metric][0]}\")\n",
+    "    if not second_metric:\n",
+    "        print(f\"{metric}: {hyperparam_grid[metric][0]}\")\n",
+    "    else:\n",
+    "        print(f\"{metric} / {second_metric}: {hyperparam_grid[metric][0]} / {hyperparam_grid[second_metric][0]}\")\n",
     "    print()\n",
     "    \n",
-    "    for key in [\"pearson\", \"spearman\", \"accuracy\", \"mcc\", \"f1\", \"loss\", \"training time\", \"training energy\", \"device\"]:\n",
+    "    for key in [\"pearson\", \"spearman\", \"accuracy\", \"mcc\", \"f1\", \"loss\", \"training time\", \"training energy\", \"device\", \"embedding time\", \"embedding energy\"]:\n",
     "        if key in hyperparam_grid:\n",
     "            del hyperparam_grid[key]\n",
     "\n",
@@ -80,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "id": "036b2c55-d063-4094-a481-dc1466d81e1e",
    "metadata": {},
    "outputs": [
@@ -88,9 +108,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "embedding: cls\n",
-      "task: cola\n",
-      "mcc score: 0.4106901466550892\n",
+      "embedding: cls_single\n",
+      "task: wnli\n",
+      "accuracy: 0.5633802816901409\n",
       "\n"
      ]
     },
@@ -104,24 +124,82 @@
        " 'norm': [False],\n",
        " 'input_size': [768],\n",
        " 'layer_size': [768],\n",
+       " 'num_classes': [1],\n",
        " 'num_layers': [1],\n",
-       " 'weight_decay': [0.0001],\n",
+       " 'weight_decay': [0.01],\n",
        " 'patience': [3],\n",
        " 'min_delta': [0]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embedding = \"cls\"\n",
-    "task = \"cola\"\n",
-    "results_base = \"./results/\" # base directory for results .csv files\n",
+    "embedding = \"cls_single\"\n",
+    "task = \"wnli\"\n",
+    "filepath = \"./results/\" # base directory for results .csv files\n",
+    "dates = [\"20240105\", \"20240106\"] # get results from specific dates\n",
     "\n",
-    "extract_hyperparameters(results_base, embedding, task)"
+    "extract_hyperparameters_from_dir(filepath, embedding, task, dates=dates)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c77e019c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "embedding: meanpool_single\n",
+      "task: mrpc\n",
+      "accuracy score: 0.7401960784313726\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'embedding time': [0.0002200603485107],\n",
+       " 'embedding energy': [0.0165045261383056],\n",
+       " 'num_epochs': [50],\n",
+       " 'batch_size': [512],\n",
+       " 'learning_rate': [0.001],\n",
+       " 'category': ['BC'],\n",
+       " 'norm': [False],\n",
+       " 'input_size': [768],\n",
+       " 'layer_size': [768],\n",
+       " 'num_classes': [1],\n",
+       " 'num_layers': [5],\n",
+       " 'weight_decay': [0.01],\n",
+       " 'patience': [3],\n",
+       " 'min_delta': [0]}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding = \"meanpool_single\"\n",
+    "task = \"mrpc\"\n",
+    "filepath = './results/meanpool_single/mrpc/val_20240105_174424_DistilRoBERTa.csv'\n",
+    "\n",
+    "extract_hyperparameters_from_file(filepath, embedding, task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2860f73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
