update early stopping and patience

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -159,12 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"wnli\"\n",
+    "task_param = \"mrpc\"\n",
     "embedding_param = [\"meanpool_single\"]\n",
     "\n",
     "use_carbontracker = False\n",
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,52 +353,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1fab07868cd4d55831a653a03ab378c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/635 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e6ab0a7eaea40c6b721ce4bfaaa010b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/71 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43aef2b97b3848118fd1f7e14e216bbd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/146 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_len=512\n",
     "\n",
@@ -470,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,15 +700,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['meanpool_single']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(embedding_param)"
    ]
@@ -803,36 +744,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_size = X_train_computed.shape[1]\n",
     "\n",
     "param_grid = {\n",
-    "    'num_epochs': [50],\n",
-    "    'batch_size': [32, 512],\n",
-    "    'learning_rate': [1e-2, 1e-4],\n",
+    "    'max_epochs': [50],\n",
+    "    'batch_size': [32, 128, 512],\n",
+    "    'learning_rate': [1e-2, 1e-3, 1e-4],\n",
     "    'category': [task_config.class_type],\n",
     "    'norm': [False],\n",
     "    'input_size': [input_size],\n",
     "    'layer_size': [768],\n",
     "    'num_classes': [task_config.num_classes],\n",
     "    'num_layers': [1, 3, 5],\n",
-    "    'weight_decay':[1e-2, 1e-4],\n",
-    "    'patience': [3],\n",
+    "    'weight_decay':[1e-2, 1e-3, 1e-4],\n",
+    "    'patience': [5],\n",
     "    'min_delta': [0],\n",
-    "    'device': [device_name]\n",
+    "    'device': [device_name],\n",
+    "    'verbose':[True]\n",
     "}\n",
-    "\n",
-    "# 'input_size': [input_size],\n",
-    "# 'layer_size': [input_size // 4, input_size // 2, input_size, input_size * 2, input_size * 4],\n",
     "\n",
     "# Create a list of all combinations of hyperparameters\n",
     "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
@@ -843,29 +774,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./results/meanpool_single/mrpc/val_20240106_011328_DistilRoBERTa.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd7598e7ce4143cfbc4e516ab776d9f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/24 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create output folder if it doesn't exist\n",
     "if not os.path.exists('output'):\n",
@@ -891,9 +800,10 @@
     "\n",
     "with open(results_file, 'w', newline='') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
-    "    header = metric_types + ['training time', 'embedding time', 'training energy', 'embedding energy'] + list(all_params[0].keys())\n",
+    "    header = metric_types + ['num_epochs', 'training time', 'embedding time', 'training energy', 'embedding energy'] + list(all_params[0].keys())\n",
     "    writer.writerow(header)\n",
     "print(f\"saving results to ./{results_file}\")\n",
+    "metric_types += [\"epoch\"]\n",
     "# Saves best accuracy for progress bar display\n",
     "display_best = float(\"-inf\")\n",
     "\n",
@@ -924,7 +834,7 @@
     "    training_energy = np.mean(energy_per_epoch) \n",
     "    # Compute energy for embedding generation\n",
     "    embedding_energy = get_energy(embedding_time, device) # This method effectively just computes energy for a given time\n",
-    "    \n",
+    "\n",
     "    metric_vals = [metrics[mt] for mt in metric_types]\n",
     "    \n",
     "    # displaying results in progress bar\n",
@@ -967,13 +877,6 @@
     "\n",
     "results_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -992,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
