--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -44,8 +44,6 @@
     "from collections import namedtuple\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "from carbontracker.tracker import CarbonTracker\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -53,7 +51,6 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from datasets import load_dataset\n",
     "\n",
-    "# from utils.feed_forward import FeedForward\n",
     "from utils.feed_forward import FeedForward\n",
     "from utils.cls import extract_cls_embeddings\n",
     "from utils.mean_pooling import mean_pooling\n",
@@ -157,11 +154,7 @@
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
     "task_param = \"mrpc\"\n",
-    "embedding_param = [\"meanpool_single\"]\n",
-    "\n",
-    "use_carbontracker = False\n",
-    "# NOTE: Carbontracker should generate its own output file \n",
-    "# => logged benchmarking results will be dummy values if use_carbontracker = True"
+    "embedding_param = [\"cls_single\"]"
    ]
   },
   {
@@ -360,7 +353,6 @@
     "max_len=512\n",
     "\n",
     "def tokenize(examples, name):\n",
-    "    # print(task_config.col_names[0])\n",
     "    tokenized = tokenizer(examples[task_config.col_names[0]],\n",
     "                          add_special_tokens=True,\n",
     "                          padding='max_length',\n",
@@ -370,7 +362,6 @@
     "    return {name + \"_\" + key: value.to(device) for key, value in tokenized.items()}\n",
     "\n",
     "def tokenize_single(examples, name):\n",
-    "    # print(task_config.col_names[0], task_config.col_names[1])\n",
     "    tokenized_1 = tokenizer(examples[task_config.col_names[0]],\n",
     "                         add_special_tokens=True,\n",
     "                         padding='max_length',\n",
@@ -389,7 +380,6 @@
     "    return tokenized_output\n",
     "\n",
     "def tokenize_double(examples, name):\n",
-    "    # print(task_config.col_names[0], task_config.col_names[1])\n",
     "    tokenized = tokenizer(examples[task_config.col_names[0]],\n",
     "                          examples[task_config.col_names[1]],\n",
     "                          add_special_tokens=True,\n",
@@ -544,14 +534,9 @@
     "        embeddings.append(batch_embeddings)\n",
     "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
-    "if use_carbontracker:\n",
-    "    print(\"Embedding: Using Carbontracker\")\n",
-    "    tracker = CarbonTracker(epochs=1)\n",
-    "    tracker.epoch_start()\n",
-    "else:\n",
-    "    print(\"Embedding: Using default time tracking\")\n",
-    "    # Track time\n",
-    "    start_time = time.time()\n",
+    "print(\"Embedding: Using default time tracking\")\n",
+    "# Track time\n",
+    "start_time = time.time()\n",
     "\n",
     "if create_dataloader: # Compute CLS/Meanpool embeddings\n",
     "    compute_embeddings(train_loader, X_train)\n",
@@ -574,11 +559,7 @@
     "        X_val[id] = compute_sentence(data[\"validation\"][task_config.col_names[0]])\n",
     "        X_test[id] = compute_sentence(data[\"test\"][task_config.col_names[0]])\n",
     "\n",
-    "if use_carbontracker:\n",
-    "    tracker.epoch_end()\n",
-    "    embedding_time = 0.0 # temporary value for logging\n",
-    "else:\n",
-    "    embedding_time = time.time() - start_time"
+    "embedding_time = time.time() - start_time"
    ]
   },
   {
@@ -702,15 +683,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(embedding_param)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "######################\n",
     "# Choose ids of (Ux, Vx) to alter embeddings\n",
     "column_ids = [0]\n",
@@ -825,8 +797,7 @@
     "    metrics, train_times_per_epoch, energy_per_epoch = feed_forward.fit(X_train_computed,\n",
     "                                                                        Y_train,\n",
     "                                                                        X_val_computed,\n",
-    "                                                                        Y_val,\n",
-    "                                                                        use_carbontracker)\n",
+    "                                                                        Y_val)\n",
     "    \n",
     "    # Log average training time per epoch for current parameter set\n",
     "    # Note: FFN frequently stops early\n",
@@ -866,7 +837,6 @@
    "outputs": [],
    "source": [
     "results_df = pd.read_csv(results_file)\n",
-    "# results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
     "if task_config.class_type in [\"BC\", \"MC\"]:\n",
     "    print_metric = \"accuracy\"\n",
     "elif task_config.class_type == \"R\":\n",
@@ -876,6 +846,15 @@
     "best_row = results_df[results_df[print_metric] == best]\n",
     "\n",
     "results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_row"
    ]
   }
  ],
@@ -895,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
