remove not needed compute transformations

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -690,7 +690,7 @@
     "\n",
     "if column_ids:\n",
     "    f = lambda embeddings : add_embeddings(embeddings=embeddings, column_ids=column_ids, embedding_size=768, \n",
-    "                                           is_UV=[False, False], is_diff=[True, False], is_mult=[False, False])\n",
+    "                                           is_UV=[False], is_diff=[True], is_mult=[False])\n",
     "\n",
     "    X_train_computed = f(embeddings=X_train)\n",
     "    X_val_computed = f(embeddings=X_val)\n",
@@ -874,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
